k8s/sxinfinity.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    app: sxinfinity
  name: sxinfinity
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sxinfinity
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sxinfinity
    spec:
      containers:
      - image: 597107324098.dkr.ecr.us-east-1.amazonaws.com/sxinfinity
        imagePullPolicy: Always
        name: sxinfinity
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1





- task: Kubernetes@1
  inputs:
    connectionType: 'Kubernetes Service Connection'
    kubernetesServiceEndpoint: 'eks'
    namespace: 'default'
    command: 'apply'
    arguments: '-f ./k8s/deploy-k8s.ym'
    secretType: 'dockerRegistry'
    containerRegistryType: 'Azure Container Registry'
