k8s/service-web01.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: skauth
  name: skauth
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: skauth
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
